# Content_Creation

./: README.md  docker-compose.yml  railway.json
backend/: Dockerfile  README_MCP_FASTAPI.md  pyproject.toml  railway  railway.json  requirements.txt
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  brand_agent.py  content_agent.py  coordinator.py  tools.py
backend/src/api/: __init__.py  analytics.py  content.py  integrations.py  search.py  websocket.py
backend/src/config/: __init__.py  settings.py
backend/src/data/: __init__.py  demo_data.py  demo_showcase.py  extended_content.py  models.py
backend/src/mcp/: __init__.py  clients.py  exceptions.py  mock_servers.py
backend/src/rag/: README.md  __init__.py  chains.py  demo_langchain_agents.py  mock_llm.py  prompts.py
backend/src/vector_db/: README.md  __init__.py  chroma_client.py  demo_vector_capabilities.py  init_db.py  langchain_retriever.py  test_vector_db.py
deployment/: nginx.conf  railway.json
docs/: API.md  ARCHITECTURE.md  DEMO_SCENARIOS.md  DEPLOYMENT.md  DEVELOPMENT.md  RAILWAY_CHECKLIST.md  RAILWAY_DEPLOYMENT.md
frontend/: Dockerfile  ENVIRONMENT_VARIABLES.md  README_REACT_FRONTEND.md  nginx.conf  package.json  railway.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  env.d.ts  index.css  main.tsx
frontend/src/components/: README.md
frontend/src/components/analytics/: PerformanceDashboard.tsx
frontend/src/components/content/: ContentGenerator.tsx
frontend/src/components/integrations/: MCPManager.tsx
frontend/src/components/ui/: index.ts  textarea.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: build.sh  dev.sh  setup.sh  test.sh
